--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,8 @@
   ],
   "rules": {
     "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+    "no-unused-labels": "off",
+    "@typescript-eslint/ban-ts-comment": "warn"
   }
 }
