--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/joy": "^5.0.0-alpha.56",
     "@mui/material": "^5.10.12",
+    "@mui/x-date-pickers": "^5.0.9",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -27,9 +28,9 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "react-hook-form": "^7.39.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "typescript": "^4.8.4",
@@ -57,6 +58,7 @@
     "@types/node-sass": "^4.11.3",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "dayjs": "^1.11.6",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0"
   }
